Completed Task 2 test architecture and implementation